--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -80,7 +80,7 @@
       <div class="splash-screen">
         <div>
           <h1><%= htmlWebpackPlugin.options.APP_NAME %> requires JavaScript</h1>
-          <p>Consider using <a href="https://desktop.turbowarp.org/">TurboWarp Desktop</a> if you are afraid of remote JavaScript.</p>
+          <p>Consider using <a href="https://02engine.02studio.xyz/">02Engine Desktop</a> if you are afraid of remote JavaScript.</p>
         </div>
       </div>
     </noscript>
