--- a/src/playground/index.ejs
+++ b/src/playground/index.ejs
@@ -98,7 +98,7 @@
         'use strict';
 
         var theme = '';
-        var accent = '#00baad';
+        var accent = '#ff4c4c';
 
         try {
           var themeSetting = localStorage.getItem('tw:theme');
