--- a/src/playground/embed.ejs
+++ b/src/playground/embed.ejs
@@ -12,7 +12,7 @@
         height: 100%;
         top: 0;
         left: 0;
-        background-color: #00baad;
+        background-color: #ff4c4c;
         color: white;
         display: flex;
         flex-direction: column;
