--- a/src/css/z-index.css
+++ b/src/css/z-index.css
@@ -27,6 +27,7 @@ $z-index-stage-color-picker-background: 2000;
 $z-index-stage-with-color-picker: 2010;
 $z-index-stage-header: 500; /* behind modals */
 $z-index-stage-wrapper-overlay: 500; /* behind modals */
+$z-index-stage-dragging: 492; /* above menu-bar when dragging */
 
 /* in most interfaces, the context menu is always on top */
 $z-index-context-menu: 10000;
