--- a/src/components/menu-bar/menu-bar.css
+++ b/src/components/menu-bar/menu-bar.css
@@ -268,3 +268,14 @@
     opacity: 0.5;
     cursor: not-allowed;
 }
+
+/* Git button specific styling */
+.git-button-icon {
+    display: none;
+}
+
+@media only screen and (max-width: 1124px) {
+    .git-button-icon {
+        display: inline-block;
+    }
+}
