--- a/src/addons/settings/settings.css
+++ b/src/addons/settings/settings.css
@@ -28,7 +28,9 @@ a[href] {
     color: $link-color;
     text-decoration: underline;
 }
-a:active, a:focus {
+
+a:active,
+a:focus {
     outline: none;
     box-shadow: 0 0 0 3px $looks-transparent;
 }
@@ -55,12 +57,14 @@ a:active, a:focus {
     background-color: $ui-secondary;
     box-shadow: 0 2px 5px $shadow;
 }
+
 @media (max-width: 700px) {
     .header {
         padding-left: 5px;
         padding-right: 5px;
     }
 }
+
 .header .section {
     display: flex;
     flex-direction: row;
@@ -82,10 +86,13 @@ a:active, a:focus {
     display: flex;
     align-items: center;
 }
+
 .button:hover {
     background: $ui-tertiary;
 }
-.button:active, .button:focus-within {
+
+.button:active,
+.button:focus-within {
     box-shadow: 0 0 0 3px $looks-transparent;
 }
 
@@ -95,9 +102,11 @@ a:active, a:focus {
     border: 1px solid $ui-black-transparent;
     border-radius: 4px;
 }
+
 .search-container:focus-within {
     box-shadow: 0 0 0 3px $looks-transparent;
 }
+
 .search-input {
     color: inherit;
     width: 150px;
@@ -108,10 +117,12 @@ a:active, a:focus {
     background-color: transparent;
     font-size: 14px;
 }
+
 /* legacy edge */
 .search-input::-ms-clear {
     display: none;
 }
+
 .search-button {
     height: 36px;
     width: 36px;
@@ -124,14 +135,16 @@ a:active, a:focus {
     background-position: center;
     filter: $filter-icon-black;
 }
-.search-input:not([value=""]) ~ .search-button {
+
+.search-input:not([value=""])~.search-button {
     background-image: url("./icons/clear.svg") !important;
 }
 
 .feedback-button-outer {
     background: $ui-secondary;
     border: 1px solid $ui-black-transparent;
-    color: inherit !important; /* override <a> colors */
+    color: inherit !important;
+    /* override <a> colors */
     height: 36px;
     box-sizing: border-box;
     border-radius: 4px;
@@ -143,9 +156,12 @@ a:active, a:focus {
     align-items: center;
     text-decoration: none !important;
 }
-.feedback-button-outer:active, .feedback-button-outer:focus-within {
+
+.feedback-button-outer:active,
+.feedback-button-outer:focus-within {
     box-shadow: 0 0 0 3px $looks-transparent;
 }
+
 .feedback-button-inner {
     text-decoration: none;
     font-weight: bold;
@@ -158,6 +174,7 @@ a:active, a:focus {
     padding: 10px 20px;
     height: 100%;
 }
+
 @media (max-width: 700px) {
     .addons {
         padding-left: 5px;
@@ -168,6 +185,7 @@ a:active, a:focus {
 .addon-group {
     margin: 0 0 10px 0;
 }
+
 .addon-group-name {
     background: none;
     border: none;
@@ -175,6 +193,7 @@ a:active, a:focus {
     display: flex;
     align-items: center;
 }
+
 .addon-group-name::after {
     margin-left: 16px;
     content: '';
@@ -182,20 +201,24 @@ a:active, a:focus {
     width: 100px;
     flex: 1;
 }
+
 .addon-group-expand-container {
     margin-right: 8px;
     border-radius: 5px;
     width: 24px;
     height: 24px;
 }
+
 .addon-group-name:hover .addon-group-expand-container {
     background: $ui-black-transparent;
 }
+
 .addon-group-expand-icon {
     width: 100%;
     height: 100%;
     filter: $filter-icon-black;
 }
+
 .addon-group-expand-icon[data-open="true"] {
     transform: scaleY(-1);
 }
@@ -207,6 +230,7 @@ a:active, a:focus {
     margin: 10px 0 10px 0;
     font-size: 14px;
 }
+
 .addon-dirty {
     background-color: $ui-tertiary;
 }
@@ -231,12 +255,13 @@ a:active, a:focus {
     align-items: center;
     white-space: nowrap;
 }
+
 .addon-switch {
     margin-right: 8px;
 }
-.addon-title-text {
 
-}
+.addon-title-text {}
+
 .addon-id {
     margin-left: 10px;
 }
@@ -263,13 +288,17 @@ a:active, a:focus {
     border: none;
     background-color: transparent;
 }
+
 .reset-button:hover {
     background: $ui-black-transparent;
 }
-.reset-button:active, .reset-button:focus-within {
+
+.reset-button:active,
+.reset-button:focus-within {
     outline: none;
     box-shadow: 0 0 0 3px $looks-transparent;
 }
+
 .reset-button-image {
     padding: 1px 0;
     height: 16px;
@@ -289,9 +318,11 @@ a:active, a:focus {
     transition: 0.25s ease;
     transition-property: background;
 }
+
 .switch[state="on"] {
     background: $looks-secondary;
 }
+
 .switch::before {
     content: "";
     position: absolute;
@@ -305,12 +336,15 @@ a:active, a:focus {
     transition: 0.25s ease;
     transition-property: background, left;
 }
+
 .switch[state="on"]::before {
     background: #fff;
     left: auto;
     right: 3px;
 }
-.switch:active, .switch:focus-within {
+
+.switch:active,
+.switch:focus-within {
     outline: none;
     box-shadow: 0 0 0 3px $looks-transparent;
 }
@@ -319,6 +353,7 @@ a:active, a:focus {
     display: flex;
     align-items: center;
 }
+
 .tag {
     border-radius: 4px;
     padding: 2px 5px;
@@ -326,36 +361,43 @@ a:active, a:focus {
     border-bottom: 2px solid #111;
     white-space: nowrap;
 }
+
 .tag-recommended {
     color: white;
     background-color: #175ef8;
     border-color: #0e44b8;
 }
+
 .tag-theme {
     color: black;
     background-color: #9ad4cf;
     border-color: #628f8c;
 }
+
 .tag-beta {
     color: white;
     background-color: #fd662b;
     border-color: #d84a12;
 }
+
 .tag-easter-egg {
     color: black;
     background-color: #b9f38d;
     border-color: #8fce5e;
 }
+
 .tag-new {
     color: white;
     background: #b117f8;
     border-color: #6f0073;
 }
+
 .tag-danger {
     color: white;
     background: #fd2b2b;
     border-color: #d81212;
 }
+
 @media (max-width: 550px) {
     .tag:not(.tag-beta) {
         display: none;
@@ -367,19 +409,15 @@ a:active, a:focus {
     margin-bottom: 10px;
 }
 
-.credit-container {
+.credit-container {}
 
-}
 .credit-title {
     padding-right: 5px;
 }
-.credit {
 
-}
+.credit {}
 
-.description {
-
-}
+.description {}
 
 .notice {
     color: black;
@@ -391,6 +429,7 @@ a:active, a:focus {
     align-items: center;
     background: rgba(154, 212, 207, 0.7);
 }
+
 .notice-icon {
     display: block;
     height: 16px;
@@ -413,6 +452,7 @@ a:active, a:focus {
     align-items: center;
     flex-wrap: wrap;
 }
+
 .setting-label {
     font-weight: bold;
     text-transform: uppercase;
@@ -420,6 +460,7 @@ a:active, a:focus {
     margin-right: 10px;
     opacity: 0.8;
 }
+
 .setting input {
     background: $input-background;
     border: 1px solid $ui-black-transparent;
@@ -428,16 +469,20 @@ a:active, a:focus {
     transition: 0.25s ease;
     transition-property: background;
 }
-.setting input:focus, .setting input:active {
+
+.setting input:focus,
+.setting input:active {
     outline: none;
     border-color: $looks-secondary;
     box-shadow: 0 0 0 3px $looks-transparent;
 }
+
 .setting input[type="checkbox"] {
     height: 20px;
     width: 20px;
     background-position: center center;
 }
+
 .setting input[type="number"],
 .setting input[type="text"] {
     border-radius: 20px 0 0 20px;
@@ -446,6 +491,7 @@ a:active, a:focus {
     height: 35px;
     box-sizing: border-box;
 }
+
 .setting input[type="color"] {
     height: 30px;
     width: 100px;
@@ -464,11 +510,13 @@ a:active, a:focus {
     box-sizing: border-box;
     height: 30px;
 }
+
 .reset-setting-button img {
     width: 20px;
     height: 20px;
     filter: $filter-icon-black;
 }
+
 .reset-setting-button[data-for-text-input="true"] {
     height: 35px;
     border-radius: 0 20px 20px 0;
@@ -477,6 +525,7 @@ a:active, a:focus {
 .select {
     display: flex;
 }
+
 .select-option {
     cursor: pointer;
     padding: 10px;
@@ -489,20 +538,25 @@ a:active, a:focus {
     transition: 0.25s ease;
     transition-property: color, background, border;
 }
+
 .select-option:first-child {
     border-top-left-radius: 4px;
     border-bottom-left-radius: 4px;
 }
+
 .select-option:last-child {
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border-right-width: 1px;
 }
+
 .select-option.selected {
     color: white;
     background: $looks-secondary;
 }
-.select-option:active, .select-option:focus-within {
+
+.select-option:active,
+.select-option:focus-within {
     outline: none;
     box-shadow: 0 0 0 3px $looks-transparent;
     z-index: 10;
@@ -511,6 +565,7 @@ a:active, a:focus {
 .presets {
     width: 100%;
 }
+
 .preset-button {
     margin-right: 10px;
 }
@@ -522,6 +577,7 @@ a:active, a:focus {
 .unsupported-container {
     margin-bottom: 10px;
 }
+
 .unsupported-addon {
     padding-left: 5px;
 }
@@ -535,18 +591,16 @@ a:active, a:focus {
     margin-bottom: 10px;
     display: flex;
 }
-.footer-buttons > .button {
+
+.footer-buttons>.button {
     margin-right: 10px;
 }
-.reset-all-button {
 
-}
-.export-button {
+.reset-all-button {}
 
-}
-.import-button {
+.export-button {}
 
-}
+.import-button {}
 
 .no-results {
     text-align: center;
@@ -565,6 +619,7 @@ a:active, a:focus {
     animation: dirty-appear 0.2s ease;
     pointer-events: none;
 }
+
 .dirty-inner {
     padding: 8px;
     background: $ui-tertiary;
@@ -584,7 +639,29 @@ a:active, a:focus {
     from {
         transform: translateY(-100%);
     }
+
     to {
         transform: translateY(0);
     }
+}
+
+.deleteButton {
+    margin-left: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    background: hsla(0, 90%, 60%, 1);
+    color: white;
+    border: none;
+    border-radius: 0.25rem;
+    font-size: 0.75rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background 0.2s;
+}
+
+.deleteButton:hover {
+    background: hsla(0, 90%, 50%, 1);
+}
+
+.deleteButton:active {
+    background: hsla(0, 90%, 40%, 1);
 }
