--- a/src/components/stage-wrapper/stage-wrapper.css
+++ b/src/components/stage-wrapper/stage-wrapper.css
@@ -25,7 +25,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1000; /* Increased z-index for fullscreen mode */
+    z-index: $z-index-stage-wrapper-overlay;
     background-color: $fullscreen-background;
     /* spacing between stage and control bar (on the top), or between
     stage and window edges (on left/right/bottom) */
